# reason-react-country-select

./: README.md  country_select.opam  dune-project  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: pages.yml
components/: App.module.css  App.re  CountryApi.re  CountrySelect.module.css  CountrySelect.re  CountrySelectList.re  CountrySelectListHooks.re  CountrySelectSearch.module.css  CountrySelectSearch.re  CountrySelectSearchContainer.module.css  CountrySelectSearchContainer.re  CountrySelectSearchItems.module.css  CountrySelectSearchItems.re  CountrySelectSearchItemsVirtual.re  EventFFI.re  Flag.re  Icons.re  KeyboardFFI.re  LCG.re  ReactQuery.re  ReactVirtual.re  ReactVirtuoso.re  WebFFI.re  dune
models/: Country.re  dune
search/: Search.ml  Search.mli  dune
